<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/spalsh"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/icon_success_ticket"
        android:layout_width="162dp"
        android:layout_height="208dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/mregular"
        android:text="@string/hasil_diagnosa"
        android:textAlignment="center"
        android:textColor="@color/blackPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_success_ticket" />


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:fontFamily="@font/mlight"
        android:lineSpacingExtra="9dp"
        android:text="@string/text_hasil_diagnosa_nama_penyakit"
        android:textAlignment="center"
        android:textColor="@color/bgPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_title" />

    <Button
        android:id="@+id/btn_pasal"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_layout_white"
        android:fontFamily="@font/mmedium"
        android:textSize="20sp"
        android:backgroundTint="@color/red_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        />

    <Button
        android:id="@+id/btn_dashboarduser"
        android:textStyle="bold"
        android:layout_width="229dp"
        android:layout_height="65dp"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_btn_white_primary"
        android:fontFamily="@font/mmedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/diagnosa_ulang"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:onClick="refreshWebView"
        app:backgroundTint="@color/red_700"
        app:layout_constraintTop_toBottomOf="@+id/btn_penyakit"
        />
    <Button
        android:id="@+id/CS_WA"
        android:textStyle="bold"
        android:layout_width="129dp"
        android:layout_height="65dp"
       android:layout_marginLeft="-100dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/bg_btn_blue_primary"
        android:fontFamily="@font/mmedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/CS"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:backgroundTint="@color/red_700"
        />
    <Button
        android:id="@+id/polis"
        android:textStyle="bold"
        android:layout_width="129dp"
        android:layout_height="65dp"

        android:layout_marginTop="-64dp"
        android:layout_marginLeft="100dp"
        android:background="@drawable/bg_btn_blue_primary"
        android:fontFamily="@font/mmedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/Polisi"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:backgroundTint="@color/red_700"
        />
    <Button
        android:id="@+id/pengacara"
        android:textStyle="bold"
        android:layout_width="229dp"
        android:layout_height="65dp"

        android:layout_marginTop="10dp"

        android:background="@drawable/bg_btn_blue_primary"
        android:fontFamily="@font/mmedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/Pengacara"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:backgroundTint="@color/red_700"
        />
    <Button
        android:id="@+id/refreshButton"
        android:layout_width="wrap_content"
        android:layout_marginLeft="140dp"
        android:layout_height="wrap_content"
        android:text="Login"
        />
    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"/>




</LinearLayout>