<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/spalsh"
    tools:context=".DaftarActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/spalsh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/mregular"
        android:text="Buat Akun  "
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />




    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"

        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:orientation="vertical">





            <EditText
                android:id="@+id/et_nama_lengkap"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_input_edit"
                android:fontFamily="@font/mmedium"
                android:lines="1"
                android:textColorHint="@color/black"
                android:paddingLeft="12dp"
                android:hint="@string/nama_pelapor"
                android:inputType="textPersonName"
                android:textColor="@color/blackPrimary" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:orientation="vertical">





            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_input_edit"
                android:fontFamily="@font/mmedium"
                android:lines="1"
                android:textColorHint="@color/black"
                android:paddingLeft="12dp"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:textColor="@color/blackPrimary" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:orientation="vertical">





            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_input_edit"
                android:fontFamily="@font/mmedium"
                android:lines="1"
                android:inputType="textPassword"
                android:textColorHint="@color/black"
                android:paddingLeft="12dp"
                android:hint="@string/password"

                android:textColor="@color/blackPrimary" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:orientation="vertical">





            <EditText
                android:id="@+id/et_alamat"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_input_edit"
                android:fontFamily="@font/mmedium"
                android:lines="1"
                android:textColorHint="@color/black"
                android:paddingLeft="12dp"
                android:hint="@string/alamat"
                android:inputType="textPersonName"
                android:textColor="@color/blackPrimary" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:orientation="vertical">





            <EditText
                android:id="@+id/et_nohp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_input_edit"
                android:fontFamily="@font/mmedium"
                android:lines="1"
                android:textColorHint="@color/black"
                android:paddingLeft="12dp"
                android:hint="@string/nohp"
                android:inputType="textPersonName"
                android:textColor="@color/blackPrimary" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:orientation="vertical">





            <EditText
                android:id="@+id/et_nama_pelaku"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_input_edit"
                android:fontFamily="@font/mmedium"
                android:hint="@string/nama_pelaku"
                android:textColorHint="@color/black"                android:lines="1"
                android:paddingLeft="12dp"

                android:textColor="@color/blackPrimary"/>


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


        </LinearLayout>

        <Button
            android:id="@+id/btn_daftar"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/bg_input_edit"
            android:fontFamily="@font/mmedium"
            android:text="@string/daftar"
            android:textColor="#000000"

            android:textSize="20sp"
            app:backgroundTint="@color/white" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/mlight"
        android:text="Sudah Punya Akun ?"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.978"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/bg_input_edit"
        android:fontFamily="@font/mmedium"
        android:text="Login"
        android:textColor="#000000"
        android:textSize="20sp"
        app:backgroundTint="@color/bgPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.972" />

</androidx.constraintlayout.widget.ConstraintLayout>