<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/spalsh"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="192dp"
        android:layout_height="110dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"

        android:orientation="vertical"
        android:paddingBottom="30dp"
        android:paddingTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_input_edit"
                android:fontFamily="@font/mmedium"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:lines="1"
                android:textColorHint="@color/white"
                android:paddingLeft="12dp"
                android:textColor="@color/blackPrimary" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_input_edit"
                android:fontFamily="@font/mmedium"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:lines="1"
                android:textColorHint="@color/white"
                android:paddingLeft="12dp"
                android:textColor="@color/blackPrimary" />


        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_layout_white"

            android:fontFamily="@font/mmedium"
            android:text="@string/login"
            android:textColor="#000000"

            app:backgroundTint="@color/bgPrimary"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="289dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="100dp"
                android:fontFamily="@font/mlight"
                android:text="        Belum Punya Akun ?"
                android:textColor="#FFFFFF"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.978"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_daftar"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/bg_layout_white"
            android:fontFamily="@font/mmedium"
            android:text="@string/daftar"
            android:textColor="#000000"
            android:textSize="20sp"
            app:backgroundTint="@color/bgPrimary" />
        />
        <TextView
            android:id="@+id/menu"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:text="Kembali Ke Menu Utama"

            android:background="@drawable/bg_layout_white"
            android:gravity="center"

            android:textColorHint="@color/red_500"
            android:textSize="20dp"/>
    </LinearLayout>










</androidx.constraintlayout.widget.ConstraintLayout>